fix for farm event input colors on mobile

--- a/webpack/css/farm_designer/farm_designer_panels.scss
+++ b/webpack/css/farm_designer/farm_designer_panels.scss
@@ -172,6 +172,9 @@
     margin-top: -0.2rem;
     vertical-align: bottom;
   }
+  input {
+    background: white;
+  }
 }
 
 .add-farm-event-panel button.red,
